<resources>
    <string name="app_name">GridMaster</string>
    <string name="welcome">Welcome to GridMaster!</string>
    <string name="view_recent_games">View recent games</string>
    <string name="regular">Regular</string>
    <string name="random_start">random start</string>
    <string name="random_and_limited">random start and limited moves</string>
    <string name="enter_players_names">Enter players names</string>
    <string name="player_one">player one</string>
    <string name="player_two">player two</string>
    <string name="next_btn">Next</string>
    <string name="easy">EASY</string>
    <string name="medium">MEDIUM</string>
    <string name="hard">HARD</string>
    <string name="help">HELP</string>
    <string name="select_diff">Select difficulty</string>
    <string name="back_home">Back to home screen</string>
    <string name="play_again">Play again</string>
    <string name="play">Play</string>
</resources>