<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/transparent_black">

        <TextView
            android:id="@+id/dialogMsgTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/select_diff"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold|italic"/>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/easyBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/easy_btn_background"
            android:textStyle="bold"
            android:text="@string/regular"
            android:textColor="@color/white"/>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/mediumBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/medium_btn_background"
            android:textStyle="bold"
            android:text="@string/medium"
            android:textColor="@color/white"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/hardBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/hard_btn_background"
            android:textStyle="bold"
            android:text="@string/hard"
            android:textColor="@color/white"
            android:layout_marginBottom="10dp"/>

    </LinearLayout>
</RelativeLayout>